--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,11 @@
-<x-counter></x-counter>
+<x-counters></x-counters>
 
 <script type="module">
 
 import { component } from './peak.js'
 
 component('x-counter', 'components/x-counter.html')
+component('x-counters', 'components/x-counters.html')
 
 </script>
 
