get attribute changes going

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
 import { component } from './peak.js'
 
 component('x-counter', 'components/x-counter.html')
+component('x-echo', 'components/x-echo.html')
 component('x-counters', 'components/x-counters.html')
 
 </script>
