--- a/example/index.html
+++ b/example/index.html
@@ -10,13 +10,10 @@ import { component, router } from './peak.js'
 window.router = router
 store.initialize()
 
-component('x-app-view', 'views/x-app-view.html')
-component('x-about-view', 'views/x-about-view.html')
-
 component('x-list-item', 'components/x-list-item.html')
 
-router.route('/', 'x-app-view')
-router.route('/about.html', 'x-about-view')
+router.route('/', '/views/index.html')
+router.route('/about.html', '/views/about.html')
 
 router.on('navigation', (route) => console.log('navigation', route))
 router.on('notFound', (route) => console.log('not-found', route))
