add support for dynamic classes

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,7 @@ router.route('/x-html.html', '/views/x-html.html')
 router.route('/x-if.html', '/views/x-if.html')
 router.route('/x-for.html', '/views/x-for.html')
 router.route('/events.html', '/views/events.html')
+router.route('/classes.html', '/views/classes.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
