add lifecycle events

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,7 @@ router.route('/x-if.html', '/views/x-if.html')
 router.route('/x-for.html', '/views/x-for.html')
 router.route('/events.html', '/views/events.html')
 router.route('/classes.html', '/views/classes.html')
+router.route('/lifecycle.html', '/views/lifecycle.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
