cleaner vite plugin

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <head>
   <link href="style.css" rel="stylesheet">
   <script type="module">
-    import "virtual:components";
+    import "virtual:peak-components";
   </script>
 </head>
 
