--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,8 @@ router.route('/x-for.html', '/views/x-for.html')
 router.route('/events.html', '/views/events.html')
 router.route('/classes.html', '/views/classes.html')
 router.route('/lifecycle.html', '/views/lifecycle.html')
+router.route('/async-lifecycle.html', '/views/async-lifecycle.html')
+router.route('/simple-async.html', '/views/simple-async.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
