--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,8 @@
 
 import { component, router } from './peak.js'
 
+component('x-echo', '/components/x-echo.html')
+
 router.route('/x-text.html', '/views/x-text.html')
 router.route('/x-html.html', '/views/x-html.html')
 router.route('/x-if.html', '/views/x-if.html')
@@ -15,6 +17,7 @@ router.route('/classes.html', '/views/classes.html')
 router.route('/lifecycle.html', '/views/lifecycle.html')
 router.route('/async-lifecycle.html', '/views/async-lifecycle.html')
 router.route('/simple-async.html', '/views/simple-async.html')
+router.route('/props.html', '/views/props.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
