--- a/tests/index.html
+++ b/tests/index.html
@@ -18,6 +18,7 @@ router.route('/lifecycle.html', '/views/lifecycle.html')
 router.route('/async-lifecycle.html', '/views/async-lifecycle.html')
 router.route('/simple-async.html', '/views/simple-async.html')
 router.route('/props.html', '/views/props.html')
+router.route('/slots.html', '/views/slots.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
