--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,7 @@ router.route('/async-lifecycle.html', '/views/async-lifecycle.html')
 router.route('/simple-async.html', '/views/simple-async.html')
 router.route('/props.html', '/views/props.html')
 router.route('/slots.html', '/views/slots.html')
+router.route('/form.html', '/views/form.html')
 
 router.on('navigation', route => console.log('navigation', route))
 router.on('notFound', route => console.log('not-found', route))
