update props syntax

--- a/tests/index.html
+++ b/tests/index.html
@@ -7,6 +7,7 @@
 import { component, router } from './peak.js'
 
 component('x-echo', '/components/x-echo.html')
+component('x-defaulting-test', '/components/x-defaulting-test.html')
 
 router.route('/x-text.html', '/views/x-text.html')
 router.route('/x-html.html', '/views/x-html.html')
