fix up accepting props and warnings

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@ import { component, router } from './peak.js'
 component('x-echo', '/components/x-echo.html')
 component('x-defaulting-test', '/components/x-defaulting-test.html')
 component('x-table-row', '/components/x-table-row.html', { extends: 'tr' })
+component('x-table-row-prop', '/components/x-table-row-prop.html', { extends: 'tr' })
 component('x-table-cell', '/components/x-table-cell.html', { extends: 'td' })
 
 router.route('/x-text.html', '/views/x-text.html')
